@@ -10,10 +10,34 @@
 		<relativePath>../org.eclipse.rmf.releng/pom.xml</relativePath>
 	</parent>
 	<groupId>org.eclipse.rmf.plugins</groupId>
-	<artifactId>org.eclipse.rmf.reqif10.pror.genhtml</artifactId>
+	<artifactId>org.eclipse.rmf.reqif10.pror.editor.tests</artifactId>
 	<version>0.6.0-SNAPSHOT</version>
-	<packaging>eclipse-plugin</packaging>
-	<!--build>
+	<packaging>eclipse-test-plugin</packaging>
+	<profiles>
+		<profile>
+			<id>macosx</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</test.vmargs>
+			</properties>
+		</profile>
+		<profile>
+			<id>other-os</id>
+			<activation>
+				<os>
+					<family>!mac</family>
+				</os>
+			</activation>
+			<properties>
+				<test.vmargs>-Xmx512m -XX:MaxPermSize=256m</test.vmargs>
+			</properties>
+		</profile>
+	</profiles>
+	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
@@ -30,27 +54,5 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build-->
-	
-    <build>  
-     <plugins>  
-      <plugin>  
-       <groupId>org.codehaus.mojo</groupId>  
-       <artifactId>exec-maven-plugin</artifactId>  
-       <version>1.1.1</version>  
-       <executions>  
-        <execution>  
-         <phase>test</phase>  
-         <goals>  
-          <goal>java</goal>  
-         </goals>  
-         <configuration>  
-          <mainClass>org.eclipse.rmf.reqif10.pror.genhtml.GenerateHtml</mainClass>  
-         </configuration>  
-        </execution>  
-       </executions>  
-      </plugin>  
-     </plugins>  
-    </build>
-    	
+	</build>
 </project>
